<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>littlebot_gazebo</name>
  <version>0.0.0</version>
  <description>The littlebot_gazebo package</description>
 
  <author email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</author>
  <maintainer email="nestor-dp@hotmail.com">Nestor Pereira Neto</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <exec_depend>gazebo_plugins</exec_depend> -->
  <!-- <exec_depend>gazebo_ros</exec_depend> -->
  <!-- <exec_depend>gazebo_ros2_control</exec_depend> -->
  <!-- <exec_depend>gazebo_ros_pkgs</exec_depend> -->
  <!-- <exec_depend>littlebot_control</exec_depend> -->
  <!-- <exec_depend>littlebot_description</exec_depend> -->
  <exec_depend>xacro</exec_depend>

  <!-- ros ignition fortress dependencies -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
